
The Bulk Publish interface in the UI now displays the name of the site
alongside the category if there is more than one site, so as to disambiguate
the list of categories. Reported by Marshall Roch. [David]

=item *

Added constraints to the story and media tables in the database to prevent the
publish status from becoming out of sync with the publish date and first
publish date. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed misnamed keywords on the C<category_keyword>, C<story_keyword>, and
C<media_keyword> tables. [David]

=item *

Documents created or updated via SOAP will now set the publish date to the
same value as the first publish date if the latter is set and the former is
not. [David]

=item *

The Burner C<publish()> method now sets the publish date to the current date
and time if it was not specified via an argument. This will hopefully fix
instances of stories and media in the database with the C<first_publish_date>
set but not the C<publish_date>. [David]

=item *

The verson 1.8.8 upgrade script that moves media files around no longer fails
when the media directory doesn't exist (becase no media documents have been
created). Reported by Wayne Slavin. [David]

=item *

Upgrades no longer fail if $BRICOLAGE_ROOT is not set and the instance of
Bricolage to be upgraded is somewhere other than F</usr/local/bricolage>.
Reported by Nate Perry-Thistle. [David]

=item *

Backported database upgrade permissions changes from Bricolag 1.10 so that
they permissions are set for the super user for upgrade scripts such as
F<inst/upgrade/1.8.7/move_media.pl> and as the PostgreSQL user only when an
upgrade script loads F<inst/upgrade/lib/bric_upgrade.pm>. Thanks to Nate
Perry-Thistle for reporting the permissions bug with the 1.8.7 upgrade script.
[David]

=item *

Fixed file names for files uploaded by MSIE on Windows. Reported by Wayne
Slavin. [David]

=item *

Modified the C<set_publish_status()> and C<set_published_version()> methods of