@@ -46,6 +46,11 @@ Added constraints to the story and media tables in the database to prevent the
 publish status from becoming out of sync with the publish date and first
 publish date. [David]
 
+=item *
+
+Changed code to show the first displayable data field of a sub-element when 
+viewing or editing an asset as opposed to only text fields. [Paul Orrock]
+
 =back
 
 =head2 Bug Fixes
